tests/errors/map_heterogeneous_values.dang
# This should fail: map values must share a common type
let result = ["a": 1, "b": "two"]
